
Changelog
=========

2018.4.0 (unreleased)
---------------------

- CSRF logging: Filter list of registered objects so only offending objects are logged in sentry [lgraf]
- Fix bug where reactivate transition action is not visible for adminsitrators. [phgross]
- Make sure widgets properly return persisted missing values for optional fields with default values [lgraf]
- Mark tasks text field no longer as the primary field. [phgross]
- Fix oc loading icon since fontawesome update. [Kevin Bieri]
- Fix inline-cell-icons since fontawesome update. [Kevin Bieri]
- Fix response description for older rejected tasks. [phgross]
- Sharing views: Show userdetails also in an overlay. [phgross]
- Show assignments info button only on rows with automatic roles. [phgross]
- Fix sharing form for IE 11. [phgross]
- Fix display of None on the bumblebee document overlay adapter as a document date. [Rotonen]
- Fix pdf conversion for mails when resolving a dossier (ArchivalFileConverter). [njohner]
- Only show create proposal button if meeting feature is enabled. [njohner]
- Add action to switch to new GEVER UI. [njohner]
- Add generic view to retrieve the value of a setting. [njohner]
- Exclude PreconditionFailed from Error log. [njohner]
- Lock oder of avaialbe roles in sharing endpoint. [phgross]
- Fix archival_file and public_trial checks on documents overview. [phgross]
- Add placeful workflow policy for inbox-area. Let inbox users edit and checkout documents but not the inbox itself. [phgross]
- Fix base URL for contentish objects. [njohner]
- Bump Chameleon to 3.3 in order to fix edge case in exception handler causing recursion. [lgraf]
- Fix styling of plone wizard. [Kevin Bieri]
- Fix styling of multiline tree portlet tab headers. [Kevin Bieri]
- Move excerpts to the file info box on proposal overviews. [Rotonen]
- Bump plone.restapi to 3.4.1 version. [phgross]
- Only prefill dossier_manager as a form level default (instead of schema level). [lgraf]