@@ -5,6 +5,7 @@ Changelog
 2018.4.0 (unreleased)
 ---------------------
 
+- Fix dropdown JS registration. [phgross]
 - CSRF logging: Filter list of registered objects so only offending objects are logged in sentry [lgraf]
 - Fix bug where reactivate transition action is not visible for adminsitrators. [phgross]
 - Make sure widgets properly return persisted missing values for optional fields with default values [lgraf]
